--- a/src/public/api-docs/index.yaml
+++ b/src/public/api-docs/index.yaml
@@ -1,21 +1,135 @@
 openapi: 3.0.0
 info:
-  title: Skeleton API
-  description: Skeleton API for Megafon Tajikistan
-  version: 0.1.9
-servers:
-  - url: /api
-
+  title: Authentication API
+  version: 1.0.0
 paths:
-  /users:
-    get:
-      summary: Returns a list of users.
+  /register:
+    post:
+      tags:
+        - Auth
+      summary: Register a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './schemas/auth.yaml#/RegisterRequest'
       responses:
         '200':
-          description: A JSON array of user names
+          description: User registered successfully
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: string
+                $ref: './schemas/auth.yaml#/RegisterResponse'
+        '400':
+          description: Bad request
+        500:
+          description: Server error
+  /login:
+    post:
+      tags:
+        - Auth
+      summary: Login and get token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './schemas/auth.yaml#/LoginRequest'
+      responses:
+        '200':
+          description: User logged in successfully
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/auth.yaml#/LoginResponse'
+        '400':
+          description: Bad request
+        500:
+          description: Server error
+  /users:
+    get:
+      tags:
+        - Users
+      summary: Get users list
+      parameters:
+        - name: filter
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: sort
+          in: query
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/users.yaml#/UsersResponse'
+        '401':
+          description: Unauthorized
+    post:
+      tags:
+        - Users
+      summary: Create user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: './schemas/users.yaml#/UserUpdateOrCreateRequest'
+      responses:
+        '200':
+          description: User Created
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/users.yaml#/UserResponse'
+        '400':
+          description: Bad request
+        500:
+          description: Server error
+  /users/{id}:
+    get:
+      summary: Get user by id
+      description: Get user by id
+      parameters:
+        - $ref: '#/components/parameters/PathId'
+      responses:
+        '200':
+          description: User Created
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/users.yaml#/UserResponse'
+        '400':
+          description: Bad request
+        500:
+          description: Server error
+
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+  parameters:
+    PathId:
+      in: path
+      name: id
+      required: true
+      schema:
+        type: integer
+        minimum: 1
+      description: Числовой id
+      example: 1
+    QueryInclude:
+      in: query
+      name: include
+      required: false
+      description: Relationships
+      schema:
+        type: string
