--- a/src/public/api-docs/index.yaml
+++ b/src/public/api-docs/index.yaml
@@ -3,7 +3,7 @@ info:
   title: Authentication API
   version: 1.0.0
 paths:
-  /register:
+  /auth/register:
     post:
       tags:
         - Auth
@@ -25,7 +25,7 @@ paths:
           description: Bad request
         500:
           description: Server error
-  /login:
+  /auth/login:
     post:
       tags:
         - Auth
