--- a/src/public/api-docs/index.yaml
+++ b/src/public/api-docs/index.yaml
@@ -169,8 +169,23 @@ paths:
           description: Bad request
         500:
           description: Server error
-
-
+  /users/current:
+    get:
+      tags:
+        - Users
+      summary: Get current by token
+      description: Get current by id
+      responses:
+        '200':
+          description: User Created
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/users.yaml#/UserResponse'
+        '400':
+          description: Bad request
+        500:
+          description: Server error
 components:
   securitySchemes:
     bearerAuth:
