--- a/src/public/api-docs/index.yaml
+++ b/src/public/api-docs/index.yaml
@@ -64,6 +64,23 @@ paths:
           description: Bad request
         500:
           description: Server error
+  /auth/current:
+    get:
+      tags:
+        - Auth
+      summary: Get current by token
+      description: Get current by id
+      responses:
+        '200':
+          description: User Created
+          content:
+            application/json:
+              schema:
+                $ref: './schemas/users.yaml#/UserResponse'
+        '400':
+          description: Bad request
+        500:
+          description: Server error
   /users:
     get:
       tags:
@@ -169,23 +186,7 @@ paths:
           description: Bad request
         500:
           description: Server error
-  /users/current:
-    get:
-      tags:
-        - Users
-      summary: Get current by token
-      description: Get current by id
-      responses:
-        '200':
-          description: User Created
-          content:
-            application/json:
-              schema:
-                $ref: './schemas/users.yaml#/UserResponse'
-        '400':
-          description: Bad request
-        500:
-          description: Server error
+
 components:
   securitySchemes:
     bearerAuth:
