--- a/src/public/api-docs/index.yaml
+++ b/src/public/api-docs/index.yaml
@@ -78,112 +78,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: './schemas/users.yaml#/UserResponse'
-        '400':
-          description: Bad request
-        500:
-          description: Server error
-  /users:
-    get:
-      tags:
-        - Users
-      summary: Get users list
-      parameters:
-        - name: filter
-          in: query
-          required: false
-          schema:
-            type: string
-        - name: sort
-          in: query
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json:
-              schema:
-                $ref: './schemas/users.yaml#/UsersResponse'
-        '401':
-          description: Unauthorized
-    post:
-      tags:
-        - Users
-      summary: Create user
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: './schemas/users.yaml#/UserUpdateOrCreateRequest'
-      responses:
-        '200':
-          description: User Created
-          content:
-            application/json:
-              schema:
-                $ref: './schemas/users.yaml#/UserResponse'
-        '400':
-          description: Bad request
-        500:
-          description: Server error
-  /users/{id}:
-    get:
-      tags:
-        - Users
-      summary: Get user by id
-      description: Get user by id
-      parameters:
-        - $ref: '#/components/parameters/PathId'
-      responses:
-        '200':
-          description: User Created
-          content:
-            application/json:
-              schema:
-                $ref: './schemas/users.yaml#/UserResponse'
-        '400':
-          description: Bad request
-        500:
-          description: Server error
-    delete:
-      tags:
-        - Users
-      summary: Delete user by id
-      description: Delete user by id
-      parameters:
-        - $ref: '#/components/parameters/PathId'
-      responses:
-        '200':
-          description: User Deleted
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/EmptyResource'
-        '400':
-          description: Bad request
-        500:
-          description: Server error
-    patch:
-      tags:
-        - Users
-      summary: Update user by id
-      description: Update user by id
-      parameters:
-        - $ref: '#/components/parameters/PathId'
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: './schemas/users.yaml#/UserUpdateOrCreateRequest'
-      responses:
-        '200':
-          description: User Updated
-          content:
-            application/json:
-              schema:
-                $ref: './schemas/users.yaml#/UserResponse'
+                $ref: './schemas/auth.yaml#/RegisterResponse'
         '400':
           description: Bad request
         500:
