--- a/src/public/api-docs/index.yaml
+++ b/src/public/api-docs/index.yaml
@@ -70,8 +70,8 @@ paths:
     get:
       tags:
         - Auth
-      summary: Get current by token
-      description: Get current by id
+      summary: Get current user by token
+      description: Get current user by id
       responses:
         '200':
           description: User Created
@@ -83,7 +83,6 @@ paths:
           description: Bad request
         500:
           description: Server error
-
 components:
   securitySchemes:
     bearerAuth:
