--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
-        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.0"
+        "laravel/tinker": "^2.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
